RASS-1048 make overall conviction date uneditable after confirm

--- a/server/views/pages/overallSentencing/check-overall-answers.njk
+++ b/server/views/pages/overallSentencing/check-overall-answers.njk
@@ -53,7 +53,7 @@
                 text: "Edit",
                 visuallyHiddenText: "conviction date the same for all offences on the warrant"
             }
-        ]
+        ] if courtAppearance.warrantInformationAccepted !== true
     }
     },
     {
@@ -70,7 +70,7 @@
                 text: "Edit",
                 visuallyHiddenText: "conviction date"
             }
-        ]
+        ] if courtAppearance.warrantInformationAccepted !== true
     }
     }
 ] %}
