--- a/server/views/pages/offence/update-offence-outcomes.njk
+++ b/server/views/pages/offence/update-offence-outcomes.njk
@@ -60,6 +60,7 @@
             isSentenced: offence.sentence,
             periodLengths: offence.sentence.periodLengths,
             sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
+            sentenceServeType: offence.sentence.sentenceServeType if offence.sentence,
             consecutiveTo: sessionConsecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceReference] if offence.sentence and offence.sentence.consecutiveToSentenceReference else consecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceUuid],
             fineAmount: offence.sentence.fineAmount,
             actions: {
@@ -104,6 +105,7 @@
                         terrorRelated: offence.terrorRelated,
                         isSentenced: offence.sentence,
                         periodLengths: offence.sentence.periodLengths,
+                        sentenceServeType: offence.sentence.sentenceServeType if offence.sentence,
                         sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
                         consecutiveTo: sessionConsecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceReference] if offence.sentence and offence.sentence.consecutiveToSentenceReference else consecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceUuid],
                         fineAmount: offence.sentence.fineAmount,
@@ -140,6 +142,7 @@
                         terrorRelated: offence.terrorRelated,
                         isSentenced: offence.sentence,
                         periodLengths: offence.sentence.periodLengths,
+                        sentenceServeType: offence.sentence.sentenceServeType if offence.sentence,
                         sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
                         consecutiveTo: sessionConsecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceReference] if offence.sentence and offence.sentence.consecutiveToSentenceReference else consecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceUuid],
                         fineAmount: offence.sentence.fineAmount,
