--- a/server/views/pages/overallSentencing/check-overall-answers.njk
+++ b/server/views/pages/overallSentencing/check-overall-answers.njk
@@ -91,7 +91,7 @@
                     text: "Edit",
                     visuallyHiddenText: "is the outcome the same for all offences on the warrant"
                 }
-            ]
+            ] if courtAppearance.warrantInformationAccepted !== true
         }
         }
     ]) %}
