RASS-764 RASS-1110 show merged from case details

--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -96,13 +96,29 @@
 
                             {% if courtCaseDetails.hasARecall and not user.hasRecallsAccess %}
 
-                            {{ govukInsetText({
-                                text: "The court case was part of a recall. To make any changes to the recall, update the details in NOMIS then reload this page.",
-                                attributes: {
-                                    "data-qa": "recallInset-" + courtCaseDetails.courtCaseUuid
-                                }
-                            }) }}
+                                {{ govukInsetText({
+                                    text: "The court case was part of a recall. To make any changes to the recall, update the details in NOMIS then reload this page.",
+                                    classes: "govuk-!-margin-top-2",
+                                    attributes: {
+                                        "data-qa": "recallInset-" + courtCaseDetails.courtCaseUuid
+                                    }
+                                }) }}
                             
+                            {% endif %}
+
+                            {% if courtCaseDetails.mergedFromCases %}
+                                {% set mergedFromCasesHtml = '' %}
+
+                                {% for mergeFromCase in courtCaseDetails.mergedFromCases%}
+                                    {% set mergedFromCasesHtml = mergedFromCasesHtml + ('<br>' if not loop.first else '') + mergeFromCase | formatOverallMergedFromCase(courtMap) %}
+                                {% endfor %}
+                                {{ govukInsetText({
+                                    html: mergedFromCasesHtml,
+                                    classes: "govuk-!-margin-top-2",
+                                    attributes: {
+                                        "data-qa": "mergedCaseInset-" + courtCaseDetails.courtCaseUuid
+                                    }
+                                }) }}
                             {% endif %}
 
                             {{
@@ -160,7 +176,9 @@
                                                         consecutiveTo: (consecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceUuid] | checkConsecutiveToSameCase(courtCaseDetails.offences, offence.sentence.consecutiveToSentenceUuid))  if offence.sentence,
                                                         sentenceType: (courtCaseDetails.sentenceTypeMap[offence.sentence.sentenceTypeId] | sentenceTypeValueOrLegacy(offence.sentence.legacyData))  if offence.sentence,
                                                         fineAmount: offence.sentence.fineAmount  if offence.sentence,
-                                                        detailsClasses: 'govuk-!-padding-4'
+                                                        detailsClasses: 'govuk-!-padding-4',
+                                                        mergedFromCase: offence.mergedFromCase,
+                                                        courtDetails: courtMap
                                                     })
                                                 }}
                                             {% endfor %}
@@ -198,7 +216,7 @@
                                                 }),
                                                 visuallyHiddenText: "Inactive"
                                             }
-                                             if courtCaseDetails.overallCaseStatus == "INACTIVE" else ({
+                                             if courtCaseDetails.overallCaseStatus == "INACTIVE" or courtCaseDetails.overallCaseStatus == "MERGED" else ({
                                                 href: null,
                                                 html: govukTag({
                                                     text: "Recalled",
