--- a/server/views/pages/sentencing/upload-court-documents.njk
+++ b/server/views/pages/sentencing/upload-court-documents.njk
@@ -27,7 +27,7 @@
         </p>
       {% else %}
         <p class="govuk-body">
-          <a href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/warrant/upload-documents">Upload sentencing warrant</a>
+          <a href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/warrant/upload-documents?_csrf={{ csrfToken }}">Upload sentencing warrant</a>
         </p>
       {% endif %}
       <hr>
@@ -78,6 +78,14 @@
           <a href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/prison-court-register/upload-documents">Upload prison court register</a>
         </p>
       {% endif %}
+
+      <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-check-answers">
+                      <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+                      {{ govukButton({
+                          text: "Confirm and continue",
+                          attributes: {  'data-qa': 'continue-button' }
+                      }) }}
+                  </form>
 
     </div>
   </div>
