RASS-764 do not show merged from cases inset when no merged from cases

--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -106,7 +106,7 @@
                             
                             {% endif %}
 
-                            {% if courtCaseDetails.mergedFromCases %}
+                            {% if courtCaseDetails.mergedFromCases and courtCaseDetails.mergedFromCases.length %}
                                 {% set mergedFromCasesHtml = '' %}
 
                                 {% for mergeFromCase in courtCaseDetails.mergedFromCases%}
