--- a/server/views/pages/sentencing/upload-court-documents.njk
+++ b/server/views/pages/sentencing/upload-court-documents.njk
@@ -3,7 +3,7 @@
 
 {% set pageTitle = applicationName + " - upload court documents" %}
 
-{% block content %}
+{% block pageContent %}
   <div class="govuk-grid-row govuk-!-margin-top-4">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">Upload court documents</h1>
@@ -22,23 +22,17 @@
 
       {# Loop through each defined document type #}
       {% for docTypeInfo in documentTypesToDisplay %}
-        {#
-          Find the matching uploaded document using a Nunjucks filter or a simple check.
-          Nunjucks doesn't have a direct 'find' method like JavaScript arrays.
-          A common pattern is to filter and then take the first item, or to iterate and use a flag.
-          However, for a simple check, we can rely on the `first` filter after a `selectattr` filter.
-        #}
-        {% set uploadedDoc = uploadedDocuments | selectattr('type', 'equalto', docTypeInfo.type) | first %}
+        {% set uploadedDoc = uploadedDocuments | selectattr('documentType', 'equalto', docTypeInfo.type) | first %}
 
         <h2 class="govuk-heading-m govuk-!-margin-bottom-2">{{ docTypeInfo.name }}</h2>
 
-        {% if uploadedDoc %}
+        {% if uploadedDoc and uploadedDoc.documentType == docTypeInfo.type %}
           {# Document of this type has been uploaded #}
           <p class="govuk-body">
             <div>
               <span>{{ uploadedDoc.fileName }}</span>
               <span class="govuk-tag govuk-!-margin-left-2">Uploaded</span>
-              <a class="govuk-link govuk-!-margin-left-2" href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/{{ uploadedDoc.documentType }}/remove-document">Remove</a>
+              <a class="govuk-link govuk-!-margin-left-2" href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/{{ uploadedDoc.documentType | lower }}/remove-document">Remove</a>
             </div>
           </p>
         {% else %}
@@ -53,7 +47,7 @@
       <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-check-answers">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
         {{ govukButton({
-            text: "Confirm and continue",
+            text: "Continue",
             attributes: { 'data-qa': 'continue-button' }
         }) }}
       </form>
