RASS-1064 content dependent on whether all appearances have recalls

--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -196,7 +196,14 @@
                             </div>
                             <hr class="govuk-section-break govuk-!-margin-top-4 govuk-section-break--visible">
                             <p class="govuk-body govuk-!-margin-top-6">
-                                <a class="govuk-link--no-visited-state govuk-!-font-weight-bold" href="/person/{{nomsId}}/view-court-case/{{courtCaseDetails.courtCaseUuid}}/details">View and edit all appearances for this court case ({{ courtCaseDetails.appearanceTotal }})</a>
+                                <a class="govuk-link--no-visited-state govuk-!-font-weight-bold" href="/person/{{nomsId}}/view-court-case/{{courtCaseDetails.courtCaseUuid}}/details">
+                                    {% if courCaseDetails.allAppearancesHaveRecall %}
+                                        View all appearances for this court case ({{ courtCaseDetails.appearanceTotal }})
+                                    {% else %}
+                                        View and edit all appearances for this court case ({{ courtCaseDetails.appearanceTotal }})
+                                    {% endif %}
+                                    
+                                </a>
                             </p>
 
                         {% endset %}
