RASS-1064 typo fix

--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -197,7 +197,7 @@
                             <hr class="govuk-section-break govuk-!-margin-top-4 govuk-section-break--visible">
                             <p class="govuk-body govuk-!-margin-top-6">
                                 <a class="govuk-link--no-visited-state govuk-!-font-weight-bold" href="/person/{{nomsId}}/view-court-case/{{courtCaseDetails.courtCaseUuid}}/details">
-                                    {% if courCaseDetails.allAppearancesHaveRecall %}
+                                    {% if courtCaseDetails.allAppearancesHaveRecall %}
                                         View all appearances for this court case ({{ courtCaseDetails.appearanceTotal }})
                                     {% else %}
                                         View and edit all appearances for this court case ({{ courtCaseDetails.appearanceTotal }})
