--- a/server/views/pages/appearanceUpdatedConfirmation.njk
+++ b/server/views/pages/appearanceUpdatedConfirmation.njk
@@ -1,4 +1,4 @@
-{% extends "../../partials/prisonerBannerLayout.njk" %}
+{% extends "../partials/prisonerBannerLayout.njk" %}
 {% from "govuk/components/panel/macro.njk" import govukPanel %}
 
 {% set pageTitle = applicationName + " - Appearance details successfully updated" %}
