--- a/server/views/pages/appearanceUpdatedConfirmation.njk
+++ b/server/views/pages/appearanceUpdatedConfirmation.njk
@@ -17,7 +17,7 @@
             <div class="govuk-!-margin-top-6">
                 <h2 class="govuk-heading-l">What you can do next</h2>
                     <div class="govuk-body govuk-!-margin-top-6">
-                        <a class="govuk-link" href="person/{{ nomsId }}/view-court-case/{{ courtCaseReference }}/details">Go back to court case{{' ' + latestAppearance.courtCaseReference if latestAppearance.courtCaseReference}} at {{ courtDetails.courtName }}</a>
+                        <a class="govuk-link" href="/person/{{ nomsId }}/view-court-case/{{ courtCaseReference }}/details">Go back to court case{{' ' + latestAppearance.courtCaseReference if latestAppearance.courtCaseReference}} at {{ courtDetails.courtName }}</a>
                     </div>
                 <div class="govuk-body govuk-!-margin-top-6">
                     <span>You can also go back to {{ prisoner | firstNameSpaceLastName | pluraliseName }}:</span>
